Drop body overflow-x:hidden to fix FF svg print

--- a/packages/html/ui/site.css
+++ b/packages/html/ui/site.css
@@ -19,7 +19,6 @@ html {
 body {
 	margin: 0px;
 	padding: 0px;
-	overflow-x: hidden;
 	min-width: 320px;
 	background: #FFFFFF;
 	font-family: Arial, sans-serif;
